# dre

./: .bazelignore  .bazelrc  .bazelversion  .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .idea  .pre-commit-config.yaml  .pylintrc  .python-version  .venv  404.html  BUILD.bazel  CHANGELOG.md  CODEOWNERS  Cargo.toml  LICENSE  MODULE.bazel  Makefile  PERFORMANCE_OPTIMIZATION.md  Pipfile  README.md  RELEASE.md  VERSION  WORKSPACE.bazel  bazel-dre-1  bazel-dre2  be-dr-dre.html  canbench.yml  cliff.toml  clippy.toml  contributing.html  cordoned_features.yaml  create-a-neuron.html  decentralization.html  deny.toml  dfx.json  env.template  firewall-proposals.html  (+25 more)
canisters/: Cargo.toml  dfx.json
canisters/node_status_canister/: Cargo.toml  package-lock.json  webpack.config.js
canisters/trustworthy-metrics-canister/: README.md  dfx.json  pool_logs.sh
factsdb/: BUILD.bazel  README.md  main.py  mainnet-labels.yaml  mercury-dcs.yml  model.py  publish.py
factsdb/data/: mainnet_guests.csv  mainnet_physical_systems.csv  mainnet_principals.csv  mainnet_subnets.csv  mercury_guests.csv  mercury_principals.csv  mercury_subnets.csv  staging_guests.csv  staging_physical_systems.csv  staging_principals.csv  staging_subnets.csv
images/: BUILD.bazel  containers.conf  pam_sudo_fix  sub_overrides  sudoers  ubuntu_24_04_packages.lock.json  ubuntu_24_04_packages.yaml
k8s/boundary-node-service-discovery/: BUILD.bazel  boundary-node-service-discovery.py  dockerfile  pyproject.toml  requirements.txt
k8s/clickhouse-table-creator/: BUILD.bazel  clickhouse-table-creator.py
k8s/cursor-initializator-clickhouse/: BUILD.bazel  cursor-initializator-clickhouse.py  cursor-initializator.py  pyproject.toml  requirements.txt
k8s/cursor-initializator-elastic/: BUILD.bazel  cursor-initializator-elastic.py  dockerfile  pyproject.toml  requirements.txt
k8s/elastic-backup/: BUILD.bazel  elastic-backup.py
k8s/elastic-retention-enforcer/: BUILD.bazel  README.md  elastic-retention-enforcer.py
linear-jira/: .bazelrc  .bazelversion  .dockerignore  .env.template  .gitignore  BUILD.bazel  Dockerfile  README.md  WORKSPACE.bazel  main.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
observability/: BUILD.bazel  Cargo.toml  README.md  WORKSPACE.bazel
observability/config_writer_common/: BUILD.bazel  Cargo.toml
observability/log_vector_config_generator/: BUILD.bazel  Cargo.toml
observability/multiservice_discovery/: BUILD.bazel  Cargo.toml
observability/multiservice_discovery_downloader/: BUILD.bazel  Cargo.toml
observability/multiservice_discovery_shared/: BUILD.bazel  Cargo.toml
observability/node_status_updater/: BUILD.bazel  Cargo.toml
observability/obs_canister_clients/: BUILD.bazel  Cargo.toml
observability/prometheus_config_updater/: BUILD.bazel  Cargo.toml
observability/service_discovery/: BUILD.bazel  Cargo.toml
observability/vector_config_generator/: BUILD.bazel  Cargo.toml
pylib/: BUILD.bazel  __fix_import_paths.py  ic_admin.py  ic_deployment.py  ic_utils.py
release-controller/: .gitignore  BUILD.bazel  README.md  __fix_import_paths.py  cached_discourse.py  ci_check.py  commit_annotation.py  commit_annotation_recreator.py  commit_annotator.py  const.py  dre_cli.py  dryrun.py  forum.py  git_fetcher.py  git_repo.py  google_docs.py  governance.py  index.html  mock_discourse.py  mock_google_docs.py  mock_requests_post_fecher.py  process_watchdog.py  prometheus.py  public_dashboard.py  publish_notes.py  pytest.py  reconciler.py  reconciler_state.py  release_index.py  release_index_loader.py  release_notes.py  release_notes_composer.py  slack.py  slack_announce.py  test_commit_annotator.py  test_forum.py  test_publish_notes.py  test_reconciler.py  test_release_index_loader.py  test_release_notes.py  (+3 more)
release-controller/tests/: fixtures.py  mock_discourse.py  runner.py  test_cached_discourse.py  test_commit_annotator.py  test_dre_cli.py  test_forum.py  test_publish_notes.py  test_reconciler.py  test_reconciler_integration.py  test_release_index.py  test_release_index_loader.py  test_release_notes.py
rs/: Cargo.toml  cargo-clippy  oci_images.bzl  rust-toolchain.toml  rustfmt.toml
rs/archive-utils/: BUILD.bazel  Cargo.toml
rs/canister-log-fetcher/: BUILD.bazel  Cargo.toml
rs/cli/: BUILD.bazel  Cargo.toml  README.md  build.rs  build_env  csv_mapping.py  fetch-from-api.py  index.html  node_info.csv  node_info_api.csv  out  registry_dump.json
rs/cli/src/: auth.rs  (+28 more)
rs/cloud-engine-controller-backend/: .dockerignore  BUILD.bazel  Cargo.toml  Dockerfile  README.md  config.example.json
rs/decentralization/: BUILD.bazel  Cargo.toml  Dockerfile  deployment-manifest.yaml  service-manifest.yaml  swagger.yml
rs/dre-canisters/: Cargo.toml  canbench.yml  dfx.json
rs/ic-canisters/: BUILD.bazel  Cargo.toml
rs/ic-management-backend/: BUILD.bazel  Cargo.toml  Dockerfile
rs/ic-management-types/: BUILD.bazel  Cargo.toml
rs/log-fetcher/: BUILD.bazel  Cargo.toml
rs/log-noise-filter-backend/: BUILD.bazel  Cargo.toml
rs/log-noise-filter-manager/: BUILD.bazel  Cargo.toml
rs/mercury-management-backend/: Cargo.toml  Dockerfile  Makefile
scripts/: BUILD.bazel  README.md  __fix_import_paths.py  auto-update-release-index.py  auto-update-revisions.py  cargo-deny-checks.py  create-subnet-prepare-proposal.sh  free-up-nodes.py  get-logs.py  ghcr-check-and-push.py  ghcr-checker.py  host-os-release-notes.py  ic_guest_check.py  ic_guest_prepare.py  install-ic-admin  lib.sh  logs_guest.sh  logs_host.sh  mainnet-op  mainnet_ipv6_calc.py  plot_subnet_failure_rates.py  proposal_stats.py  qualification-ic-repo-patch.patch  release-notes.py  release_index_ci_check.py  rollout-git-revision-to-mainnet.sh  subnet-limit-canisters.py  teams.json  testnet-op  update-authorized-subnets.sh  update-subnet-topic-map.py  update-subnets.sh  upgrade-plan.sh
trusted-neurons-alerts/: BUILD.bazel  README.md  alerts_receiver.py  flask_app.py  governance.py  index.html  slack_app.py  test.py  test_alerts_receiver.py  test_governance.py  test_send_alert.py  tn_alerts_app.py  tn_slack_app.py
(+1957 files in other folders)
