load("@python_deps//:requirements.bzl", "requirement")

exports_files([
    "archive_canister.wasm.gz",
    "clippy.toml",
    "rustfmt.toml",
    "cordoned_features.yaml",
    "WORKSPACE.bazel",
    "mypy.ini",
])

alias(
    name = "rustfmt",
    actual = "@rules_rust//:rustfmt",
)

genrule(
    name = "release-docs",
    srcs = ["//release-controller:README.md"],
    outs = ["docs/release.md"],
    cmd = "cp $< $@",
)

load("@rules_python//python/entry_points:py_console_script_binary.bzl", "py_console_script_binary")
py_console_script_binary(
    name = "mkdocs",
    pkg = "@python_deps//mkdocs",
    data = [
        "mkdocs.yml",
        ":release-docs",
    ] + glob(["docs/**/*"]),
    deps = [
        requirement("mkdocs-material"),
        requirement("mkdocs-git-revision-date-localized-plugin"),
        requirement("mkdocs-git-committers-plugin-2"),
    ],
)
