[workspace]

members = [
    "rs/cli",
    "rs/decentralization",
    "rs/ic-management-backend",
    "rs/ic-management-types",
    "rs/ic-observability/config-writer-common",
    "rs/ic-observability/log-noise-filter-backend",
    "rs/ic-observability/log-noise-filter-downloader",
    "rs/ic-observability/multiservice-discovery",
    "rs/ic-observability/multiservice-discovery-downloader",
    "rs/ic-observability/multiservice-discovery-shared",
    "rs/ic-observability/obs-canister-clients",
    "rs/ic-observability/prometheus-config-updater",
    "rs/ic-observability/service-discovery",
    "rs/ic-observability/sns-downloader",
    "rs/log-fetcher",
    "rs/canister-log-fetcher",
    "rs/slack-notifications",
    "rs/dre-canisters/node-provider-rewards/canister",
    "rs/dre-canisters/node-provider-rewards/canister/api",
    "rs/dre-canisters/node-provider-rewards/rewards-calculation",
    "rs/dre-canisters/trustworthy-node-metrics/src/trustworthy-node-metrics-types",
    "rs/ic-observability/general-testnet-service-discovery",
]

resolver = "2"

[workspace.package]
version = "0.6.9"
edition = "2024"
authors = ["IC Decentralized Reliability Engineering (DRE) Team"]
description = "Tooling for managing the Internet Computer"
documentation = "https://github.com/dfinity/dre/"
license = "Apache-2.0"

[workspace.dependencies]
actix-web = { version = "4.11.0", default-features = false, features = [
    "compress-gzip",
    "macros",
] }
actix-rt = "2.11.0"
ahash = "0.8.12"
anyhow = "1.0.99"
async-recursion = "1.1.1"
async-trait = "0.1.89"
axum-otel-metrics = "0.10.0"
axum = "0.8.4"
backoff = { version = "0.4.0", features = ["tokio"] }
backon = "1.5.2"
candid = "0.10.18"
chrono = { version = "0.4.42", features = ["serde"] }
clap-num = "1.2"
clap = { version = "4.5", features = [
    "derive",
    "env",
    "usage",
    "color",
    "help",
    "error-context",
    "suggestions",
    "wrap_help",
    "string",
    "cargo",
] }
clap_complete = "4.5.57"
colored = "2.2.0"
comfy-table = "7.2.0"
assert_cmd = "2.0.17"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.15"
cryptoki = "0.7.0"
custom_error = "1.9.2"
decentralization = { path = "rs/decentralization" }
trustworthy-node-metrics-types = { path = "rs/dre-canisters/trustworthy-node-metrics/src/trustworthy-node-metrics-types" }
dialoguer = "0.11.0"
dirs = "5.0.1"
dotenv = "0.15.0"
base64 = "0.22.1"
edit = "0.1.5"
env_logger = "0.11.8"
erased-serde = "0.4.6"
flate2 = "1.1.2"
fs-err = "3.1.1"
fs2 = "0.4.3"
function_name = "0.3"
futures = "0.3.31"
futures-util = "0.3.31"
hex = "0.4.3"
humantime = "2.2.0"
humantime-serde = "1.1.1"
ic-agent = "0.39.3"
octocrab = "0.41.2"
self_update = { version = "0.41.0", default-features = false, features = [
    "archive-tar",
    "rustls",
] }
ic-base-types = { git = "https://github.com/dfinity/ic.git", rev = "a93a3f1eea5cacfd570d96941b5d6f6d2a9b508b" }
ic-canister-client = { git = "https://github.com/dfinity/ic.git", rev = "a93a3f1eea5cacfd570d96941b5d6f6d2a9b508b" }
ic-canister-client-sender = { git = "https://github.com/dfinity/ic.git", rev = "a93a3f1eea5cacfd570d96941b5d6f6d2a9b508b" }
ic-canisters = { path = "rs/ic-canisters" }
ic-http-types = { git = "https://github.com/dfinity/ic.git", rev = "a93a3f1eea5cacfd570d96941b5d6f6d2a9b508b" }
ic-config = { git = "https://github.com/dfinity/ic.git", rev = "a93a3f1eea5cacfd570d96941b5d6f6d2a9b508b" }
ic-crypto-utils-threshold-sig-der = { git = "https://github.com/dfinity/ic.git", rev = "a93a3f1eea5cacfd570d96941b5d6f6d2a9b508b" }
ic-dummy-getrandom-for-wasm = { git = "https://github.com/dfinity/ic.git", rev = "a93a3f1eea5cacfd570d96941b5d6f6d2a9b508b" }
ic-http-endpoints-metrics = { git = "https://github.com/dfinity/ic.git", rev = "a93a3f1eea5cacfd570d96941b5d6f6d2a9b508b" }
ic-interfaces-registry = { git = "https://github.com/dfinity/ic.git", rev = "a93a3f1eea5cacfd570d96941b5d6f6d2a9b508b" }
ic-management-backend = { path = "rs/ic-management-backend" }
ic-management-canister-types-private = { git = "https://github.com/dfinity/ic.git", rev = "a93a3f1eea5cacfd570d96941b5d6f6d2a9b508b" }
ic-management-types = { path = "rs/ic-management-types" }
ic-metrics = { git = "https://github.com/dfinity/ic.git", rev = "a93a3f1eea5cacfd570d96941b5d6f6d2a9b508b" }
ic-nervous-system-canisters = { git = "https://github.com/dfinity/ic.git", rev = "a93a3f1eea5cacfd570d96941b5d6f6d2a9b508b" }
ic-nervous-system-common = { git = "https://github.com/dfinity/ic.git", rev = "a93a3f1eea5cacfd570d96941b5d6f6d2a9b508b" }
ic-nervous-system-runtime = { git = "https://github.com/dfinity/ic.git", rev = "a93a3f1eea5cacfd570d96941b5d6f6d2a9b508b" }
ic-nns-common = { git = "https://github.com/dfinity/ic.git", rev = "a93a3f1eea5cacfd570d96941b5d6f6d2a9b508b" }
ic-nns-constants = { git = "https://github.com/dfinity/ic.git", rev = "a93a3f1eea5cacfd570d96941b5d6f6d2a9b508b" }
ic-nns-governance = { git = "https://github.com/dfinity/ic.git", rev = "a93a3f1eea5cacfd570d96941b5d6f6d2a9b508b" }
ic-nns-governance-api = { git = "https://github.com/dfinity/ic.git", rev = "a93a3f1eea5cacfd570d96941b5d6f6d2a9b508b" }
ic-protobuf = { git = "https://github.com/dfinity/ic.git", rev = "a93a3f1eea5cacfd570d96941b5d6f6d2a9b508b" }
ic-registry-canister-client = { git = "https://github.com/dfinity/ic.git", rev = "a93a3f1eea5cacfd570d96941b5d6f6d2a9b508b" }
ic-registry-canister-api = { git = "https://github.com/dfinity/ic.git", rev = "a93a3f1eea5cacfd570d96941b5d6f6d2a9b508b" }
ic-registry-client = { git = "https://github.com/dfinity/ic.git", rev = "a93a3f1eea5cacfd570d96941b5d6f6d2a9b508b" }
ic-registry-client-fake = { git = "https://github.com/dfinity/ic.git", rev = "a93a3f1eea5cacfd570d96941b5d6f6d2a9b508b" }
ic-registry-client-helpers = { git = "https://github.com/dfinity/ic.git", rev = "a93a3f1eea5cacfd570d96941b5d6f6d2a9b508b" }
ic-registry-common-proto = { git = "https://github.com/dfinity/ic.git", rev = "a93a3f1eea5cacfd570d96941b5d6f6d2a9b508b" }
ic-registry-keys = { git = "https://github.com/dfinity/ic.git", rev = "a93a3f1eea5cacfd570d96941b5d6f6d2a9b508b" }
ic-registry-local-registry = { git = "https://github.com/dfinity/ic.git", rev = "a93a3f1eea5cacfd570d96941b5d6f6d2a9b508b" }
ic-registry-local-store = { git = "https://github.com/dfinity/ic.git", rev = "a93a3f1eea5cacfd570d96941b5d6f6d2a9b508b" }
ic-registry-local-store-artifacts = { git = "https://github.com/dfinity/ic.git", rev = "a93a3f1eea5cacfd570d96941b5d6f6d2a9b508b" }
ic-registry-nns-data-provider = { git = "https://github.com/dfinity/ic.git", rev = "a93a3f1eea5cacfd570d96941b5d6f6d2a9b508b" }
ic-registry-subnet-type = { git = "https://github.com/dfinity/ic.git", rev = "a93a3f1eea5cacfd570d96941b5d6f6d2a9b508b" }
ic-registry-transport = { git = "https://github.com/dfinity/ic.git", rev = "a93a3f1eea5cacfd570d96941b5d6f6d2a9b508b" }
ic-sys = { git = "https://github.com/dfinity/ic.git", rev = "a93a3f1eea5cacfd570d96941b5d6f6d2a9b508b" }
ic-types = { git = "https://github.com/dfinity/ic.git", rev = "a93a3f1eea5cacfd570d96941b5d6f6d2a9b508b" }
ic-nervous-system-root = { git = "https://github.com/dfinity/ic.git", rev = "a93a3f1eea5cacfd570d96941b5d6f6d2a9b508b" }
ic-nervous-system-clients = { git = "https://github.com/dfinity/ic.git", rev = "a93a3f1eea5cacfd570d96941b5d6f6d2a9b508b" }
ic-nervous-system-proto = { git = "https://github.com/dfinity/ic.git", rev = "a93a3f1eea5cacfd570d96941b5d6f6d2a9b508b" }
ic-sns-wasm = { git = "https://github.com/dfinity/ic.git", rev = "a93a3f1eea5cacfd570d96941b5d6f6d2a9b508b" }
cycles-minting-canister = { git = "https://github.com/dfinity/ic.git", rev = "a93a3f1eea5cacfd570d96941b5d6f6d2a9b508b" }
ic-icrc1-test-utils = { git = "https://github.com/dfinity/ic.git", rev = "a93a3f1eea5cacfd570d96941b5d6f6d2a9b508b" }
rosetta-core = { git = "https://github.com/dfinity/ic.git", rev = "a93a3f1eea5cacfd570d96941b5d6f6d2a9b508b" }
icp-ledger = { git = "https://github.com/dfinity/ic.git", rev = "a93a3f1eea5cacfd570d96941b5d6f6d2a9b508b" }
icrc-ledger-types = { git = "https://github.com/dfinity/ic.git", rev = "a93a3f1eea5cacfd570d96941b5d6f6d2a9b508b" }
ic-metrics-encoder = "1.1.1"
ic-transport-types = "0.39.3"
ic-utils = "0.39.3"
itertools = "0.13.0"
keyring = { version = "3.6.3", features = [
    "apple-native",
    "sync-secret-service",
] }
lazy_static = "1.5.0"
log = "0.4.28"
lru = "0.12.5"
num-traits = "0.2"
opentelemetry = { version = "0.28", features = ["metrics"] }
opentelemetry_sdk = "0.28"
opentelemetry-prometheus = "0.28"
pretty_assertions = "1.4.1"
pretty_env_logger = "0.5.0"
prometheus-http-query = { version = "0.8.3", default-features = false, features = [
    "rustls-tls-webpki-roots",
] }
prometheus = { version = "0.13.4", features = ["process"] }
prost = "0.13"
rand = { version = "0.9.2", features = ["std_rng"] }
rand_seeder = "0.3.0"
regex = "1.11.2"
registry-canister = { git = "https://github.com/dfinity/ic.git", rev = "a93a3f1eea5cacfd570d96941b5d6f6d2a9b508b" }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls-webpki-roots",
    "blocking",
] }
retry = "2.1.0"
rstest = { version = "0.23.0", default-features = false }
rust_decimal = "1.37.2"
rust_decimal_macros = "1.37.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.143", default-features = false, features = [
    "preserve_order",
] }
serde_yaml = "0.9.34"
shlex = "1.3.0"
sha2 = "0.10.9"
simple_asn1 = "0.6.3"
slog-async = { version = "2.8.0", features = ["nested-values"] }
slog-term = "2.9.2"
slog = { version = "2.7.0", features = [
    "max_level_trace",
    "nested-values",
    "release_max_level_debug",
    "release_max_level_trace",
] }
spinners = "4.1.1"
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
tabled = "0.18.0"
csv_to_table = "0.3"
tabular = "0.2"
tempfile = "3.22.0"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7.16"
url = "2.5.7"
wiremock = "=0.6.4"
human_bytes = "0.4"
mockall = "0.13.1"
csv = "1.3.1"

# dre-canisters dependencies
ic-cdk = { version = "^0.18.7" }
ic-cdk-timers = { version = "^0.12.2" }
ic-cdk-macros = { version = "^0.18.7" }
ic-stable-structures = "0.6.9"
dfn_core = { git = "https://github.com/dfinity/ic.git", rev = "a93a3f1eea5cacfd570d96941b5d6f6d2a9b508b" }
rewards-calculation = { path = "rs/dre-canisters/node-provider-rewards/rewards-calculation" }
node-provider-rewards-api = { path = "rs/dre-canisters/node-provider-rewards/canister/api" }
ic-node-rewards-canister-api = { git = "https://github.com/dfinity/ic.git", rev = "a93a3f1eea5cacfd570d96941b5d6f6d2a9b508b" }

# dre-airflow deps, should be replaced with dre-airflow once
indexmap = { version = "2.11.1", features = ["serde"] }

[profile.release]
# Add debug information to the release build (does NOT reduce the level of optimization!)
# Makes flamegraphs and backtraces more readable.
# https://doc.rust-lang.org/cargo/reference/manifest.html#the-profile-sections
debug = true
