[workspace]

members = [
    "rs/cli",
    "rs/decentralization",
    "rs/ic-management-backend",
    "rs/ic-management-types",
    "rs/ic-observability/config-writer-common",
    "rs/ic-observability/log-noise-filter-backend",
    "rs/ic-observability/log-noise-filter-downloader",
    "rs/ic-observability/multiservice-discovery",
    "rs/ic-observability/multiservice-discovery-downloader",
    "rs/ic-observability/multiservice-discovery-shared",
    "rs/ic-observability/obs-canister-clients",
    "rs/ic-observability/prometheus-config-updater",
    "rs/ic-observability/service-discovery",
    "rs/ic-observability/sns-downloader",
    "rs/log-fetcher",
    "rs/canister-log-fetcher",
    "rs/slack-notifications",
    "rs/dre-canisters/trustworthy-node-metrics/src/trustworthy-node-metrics-types",
    "rs/ic-observability/general-testnet-service-discovery",
]

resolver = "2"

[workspace.package]
version = "0.7.3"
edition = "2024"
authors = ["IC Decentralized Reliability Engineering (DRE) Team"]
description = "Tooling for managing the Internet Computer"
documentation = "https://github.com/dfinity/dre/"
license = "Apache-2.0"

[workspace.dependencies]
actix-web = { version = "4.13.0", default-features = false, features = [
    "compress-gzip",
    "macros",
] }
actix-rt = "2.11.0"
ahash = "0.8.12"
anyhow = "1.0.102"
async-recursion = "1.1.1"
async-trait = "0.1.89"
axum-otel-metrics = "0.10.0"
axum = "0.8.8"
backoff = { version = "0.4.0", features = ["tokio"] }
backon = "1.6.0"
candid = "0.10.23"
chrono = { version = "0.4.43", features = ["serde"] }
clap-num = "1.2"
clap = { version = "4.5", features = [
    "derive",
    "env",
    "usage",
    "color",
    "help",
    "error-context",
    "suggestions",
    "wrap_help",
    "string",
    "cargo",
] }
clap_complete = "4.5.66"
colored = "2.2.0"
comfy-table = "7.2.2"
assert_cmd = "2.1.2"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.15"
cryptoki = "0.7.0"
custom_error = "1.9.2"
decentralization = { path = "rs/decentralization" }
trustworthy-node-metrics-types = { path = "rs/dre-canisters/trustworthy-node-metrics/src/trustworthy-node-metrics-types" }
dialoguer = "0.11.0"
dirs = "5.0.1"
dotenv = "0.15.0"
base64 = "0.22.1"
edit = "0.1.5"
env_logger = "0.11.9"
erased-serde = "0.4.9"
flate2 = "1.1.9"
fs-err = "3.3.0"
fs2 = "0.4.3"
function_name = "0.3"
futures = "0.3.32"
futures-util = "0.3.32"
hex = "0.4.3"
humantime = "2.3.0"
humantime-serde = "1.1.1"
ic-agent = "0.39.3"
octocrab = "0.41.2"
self_update = { version = "0.41.0", default-features = false, features = [
    "archive-tar",
    "rustls",
] }
ic-base-types = { git = "https://github.com/dfinity/ic.git", rev = "8ce3464705d52c0cce0173090f95e50874423932" }
ic-canister-client = { git = "https://github.com/dfinity/ic.git", rev = "8ce3464705d52c0cce0173090f95e50874423932" }
ic-canister-client-sender = { git = "https://github.com/dfinity/ic.git", rev = "8ce3464705d52c0cce0173090f95e50874423932" }
ic-canisters = { path = "rs/ic-canisters" }
ic-http-types = { git = "https://github.com/dfinity/ic.git", rev = "8ce3464705d52c0cce0173090f95e50874423932" }
ic-config = { git = "https://github.com/dfinity/ic.git", rev = "8ce3464705d52c0cce0173090f95e50874423932" }
ic-crypto-utils-threshold-sig-der = { git = "https://github.com/dfinity/ic.git", rev = "8ce3464705d52c0cce0173090f95e50874423932" }
ic-dummy-getrandom-for-wasm = { git = "https://github.com/dfinity/ic.git", rev = "8ce3464705d52c0cce0173090f95e50874423932" }
ic-http-endpoints-metrics = { git = "https://github.com/dfinity/ic.git", rev = "8ce3464705d52c0cce0173090f95e50874423932" }
ic-interfaces-registry = { git = "https://github.com/dfinity/ic.git", rev = "8ce3464705d52c0cce0173090f95e50874423932" }
ic-management-backend = { path = "rs/ic-management-backend" }
ic-management-canister-types-private = { git = "https://github.com/dfinity/ic.git", rev = "8ce3464705d52c0cce0173090f95e50874423932" }
ic-management-types = { path = "rs/ic-management-types" }
ic-metrics = { git = "https://github.com/dfinity/ic.git", rev = "8ce3464705d52c0cce0173090f95e50874423932" }
ic-nervous-system-canisters = { git = "https://github.com/dfinity/ic.git", rev = "8ce3464705d52c0cce0173090f95e50874423932" }
ic-nervous-system-common = { git = "https://github.com/dfinity/ic.git", rev = "8ce3464705d52c0cce0173090f95e50874423932" }
ic-nervous-system-runtime = { git = "https://github.com/dfinity/ic.git", rev = "8ce3464705d52c0cce0173090f95e50874423932" }
ic-nns-common = { git = "https://github.com/dfinity/ic.git", rev = "8ce3464705d52c0cce0173090f95e50874423932" }
ic-nns-constants = { git = "https://github.com/dfinity/ic.git", rev = "8ce3464705d52c0cce0173090f95e50874423932" }
ic-nns-governance = { git = "https://github.com/dfinity/ic.git", rev = "8ce3464705d52c0cce0173090f95e50874423932" }
ic-nns-governance-api = { git = "https://github.com/dfinity/ic.git", rev = "8ce3464705d52c0cce0173090f95e50874423932" }
ic-protobuf = { git = "https://github.com/dfinity/ic.git", rev = "8ce3464705d52c0cce0173090f95e50874423932" }
ic-registry-canister-client = { git = "https://github.com/dfinity/ic.git", rev = "8ce3464705d52c0cce0173090f95e50874423932" }
ic-registry-canister-api = { git = "https://github.com/dfinity/ic.git", rev = "8ce3464705d52c0cce0173090f95e50874423932" }
ic-registry-client = { git = "https://github.com/dfinity/ic.git", rev = "8ce3464705d52c0cce0173090f95e50874423932" }
ic-registry-client-fake = { git = "https://github.com/dfinity/ic.git", rev = "8ce3464705d52c0cce0173090f95e50874423932" }
ic-registry-client-helpers = { git = "https://github.com/dfinity/ic.git", rev = "8ce3464705d52c0cce0173090f95e50874423932" }
ic-registry-common-proto = { git = "https://github.com/dfinity/ic.git", rev = "8ce3464705d52c0cce0173090f95e50874423932" }
ic-registry-keys = { git = "https://github.com/dfinity/ic.git", rev = "8ce3464705d52c0cce0173090f95e50874423932" }
ic-registry-local-registry = { git = "https://github.com/dfinity/ic.git", rev = "8ce3464705d52c0cce0173090f95e50874423932" }
ic-registry-local-store = { git = "https://github.com/dfinity/ic.git", rev = "8ce3464705d52c0cce0173090f95e50874423932" }
ic-registry-local-store-artifacts = { git = "https://github.com/dfinity/ic.git", rev = "8ce3464705d52c0cce0173090f95e50874423932" }
ic-registry-nns-data-provider = { git = "https://github.com/dfinity/ic.git", rev = "8ce3464705d52c0cce0173090f95e50874423932" }
ic-registry-subnet-type = { git = "https://github.com/dfinity/ic.git", rev = "8ce3464705d52c0cce0173090f95e50874423932" }
ic-registry-transport = { git = "https://github.com/dfinity/ic.git", rev = "8ce3464705d52c0cce0173090f95e50874423932" }
ic-sys = { git = "https://github.com/dfinity/ic.git", rev = "8ce3464705d52c0cce0173090f95e50874423932" }
ic-types = { git = "https://github.com/dfinity/ic.git", rev = "8ce3464705d52c0cce0173090f95e50874423932" }
ic-nervous-system-root = { git = "https://github.com/dfinity/ic.git", rev = "8ce3464705d52c0cce0173090f95e50874423932" }
ic-nervous-system-clients = { git = "https://github.com/dfinity/ic.git", rev = "8ce3464705d52c0cce0173090f95e50874423932" }
ic-nervous-system-proto = { git = "https://github.com/dfinity/ic.git", rev = "8ce3464705d52c0cce0173090f95e50874423932" }
ic-sns-wasm = { git = "https://github.com/dfinity/ic.git", rev = "8ce3464705d52c0cce0173090f95e50874423932" }
cycles-minting-canister = { git = "https://github.com/dfinity/ic.git", rev = "8ce3464705d52c0cce0173090f95e50874423932" }
ic-icrc1-test-utils = { git = "https://github.com/dfinity/ic.git", rev = "8ce3464705d52c0cce0173090f95e50874423932" }
rosetta-core = { git = "https://github.com/dfinity/ic.git", rev = "8ce3464705d52c0cce0173090f95e50874423932" }
icp-ledger = { git = "https://github.com/dfinity/ic.git", rev = "8ce3464705d52c0cce0173090f95e50874423932" }
icrc-ledger-types = { git = "https://github.com/dfinity/ic.git", rev = "8ce3464705d52c0cce0173090f95e50874423932" }
ic-metrics-encoder = "1.1.1"
ic-transport-types = "0.39.3"
ic-utils = "0.39.3"
itertools = "0.13.0"
keyring = { version = "3.6.3", features = [
    "apple-native",
    "sync-secret-service",
] }
lazy_static = "1.5.0"
log = "0.4.29"
lru = "0.12.5"
num-traits = "0.2"
opentelemetry = { version = "0.28", features = ["metrics"] }
opentelemetry_sdk = "0.28"
opentelemetry-prometheus = "0.28"
pretty_assertions = "1.4.1"
pretty_env_logger = "0.5.0"
prometheus-http-query = { version = "0.8.3", default-features = false, features = [
    "rustls-tls-webpki-roots",
] }
prometheus = { version = "0.13.4", features = ["process"] }
prost = "0.13"
rand = { version = "0.9.2", features = ["std_rng"] }
rand_seeder = "0.3.0"
regex = "1.12.3"
registry-canister = { git = "https://github.com/dfinity/ic.git", rev = "8ce3464705d52c0cce0173090f95e50874423932" }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls-webpki-roots",
    "blocking",
] }
retry = "2.2.0"
rstest = { version = "0.23.0", default-features = false }
rust_decimal = "1.40.0"
rust_decimal_macros = "1.40.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.149", default-features = false, features = [
    "preserve_order",
] }
serde_yaml = "0.9.34"
shlex = "1.3.0"
sha2 = "0.10.9"
simple_asn1 = "0.6.4"
slog-async = { version = "2.8.0", features = ["nested-values"] }
slog-term = "2.9.2"
slog = { version = "2.8.2", features = [
    "max_level_trace",
    "nested-values",
    "release_max_level_debug",
    "release_max_level_trace",
] }
spinners = "4.1.1"
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
tabled = "0.18.0"
csv_to_table = "0.3"
tabular = "0.2"
tempfile = "3.25.0"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = "0.7.18"
url = "2.5.8"
wiremock = "=0.6.4"
human_bytes = "0.4"
mockall = "0.13.1"
csv = "1.4.0"

# dre-canisters dependencies
ic-cdk = { version = "^0.18.7" }
ic-cdk-timers = { version = "^0.12.3" }
ic-cdk-macros = { version = "^0.18.7" }
ic-stable-structures = "0.6.9"
dfn_core = { git = "https://github.com/dfinity/ic.git", rev = "8ce3464705d52c0cce0173090f95e50874423932" }
rewards-calculation = { git = "https://github.com/dfinity/ic.git", rev = "8ce3464705d52c0cce0173090f95e50874423932" }
ic-node-rewards-canister-api = { git = "https://github.com/dfinity/ic.git", rev = "8ce3464705d52c0cce0173090f95e50874423932" }

# dre-airflow deps, should be replaced with dre-airflow once
indexmap = { version = "2.13.0", features = ["serde"] }

[profile.release]
# Add debug information to the release build (does NOT reduce the level of optimization!)
# Makes flamegraphs and backtraces more readable.
# https://doc.rust-lang.org/cargo/reference/manifest.html#the-profile-sections
debug = true

